[build-system]
requires = ["setuptools>=61.0", "chromaconsole"]
build-backend = "setuptools.build_meta"

[project]
name = "crcon"
version = "1.0.1"
authors = [
  {name = "Umit Tasdelen", email = "umittadelen1277@gmail.com"}
]
description = "A small extension for chromaconsole for CMD"
keywords = ["color", "console", "terminal", "text", "style"]
readme = "README.md"
requires-python = ">=3"
dependencies = ["chromaconsole"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/umittadelen/crcon"
Bug_Tracker = "https://github.com/umittadelen/crcon/issues"

[project.scripts]
crcon = "crcon.__main__:main"